# stock-industry-map-in

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  GEMINI.md  LICENSE  README.md  industry_data.json  main.py  nse_cookies_requests.pkl  pyproject.toml
.context/: ARCHITECTURE.md  CHANGELOG.md  CONVENTIONS.md  DESIGN.md  OVERVIEW.md
.github/workflows/: update_industry_data.yml
context/: CONVENTIONS.md  DECISIONS.md  MAP.md
industry_map_client/: __init__.py  __main__.py  client.py
src/: bse_client.py  nse_client.py  orchestrator.py  store.py
temp_downloads/: nse_cookies_requests.pkl
tests/: test_industry_map_client.py  test_store.py
