[project]
name = "industry-data-in"
version = "0.1.0"
description = "Four-level NSE/BSE industry classification for Indian public stocks, plus a zero-dependency consumer client."
readme = "README.md"
requires-python = ">=3.12"
# Intentionally EMPTY. This is what consumers installing the distribution
# (to get the stdlib-only `industry_map_client`) receive. The producer's heavy
# deps live in the `producer` dependency-group below (dev/CI-only, never
# published transitively), so consumers stay zero-dependency.
dependencies = []

# Producer (main.py / src/) runtime deps. PEP 735 dependency-group: installed
# for local dev + CI via `uv sync` (see [tool.uv] default-groups) but NOT
# pulled in when another project depends on this distribution.
[dependency-groups]
producer = [
    "bse>=3.2.0",
    "nse[server]>=2.1.0",
    "tenacity>=8.2.0",
    "httpx[http2]>=0.25.0",
]

[tool.uv]
# Keep `uv sync` (local + the update_industry_data.yml workflow) installing the
# producer deps by default, so emptying [project].dependencies doesn't break it.
default-groups = ["producer"]

[project.scripts]
industry-map-refresh = "industry_map_client.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Package ONLY the consumer client. The producer (main.py, src/*) stays a
# run-in-place script set and is deliberately not installed.
[tool.setuptools]
packages = ["industry_map_client"]
